--- a/Real-estate-frontend/src/index.css
+++ b/Real-estate-frontend/src/index.css
@@ -26,6 +26,14 @@
     height: 100%;
     object-fit: cover;
   }
+  .swiper-slide .zoom-effect{
+	transform :scale(1);
+	transition: transform 3s ease-in-out;
+  }
+  .swiper-slide-active .zoom-effect{
+	transform :scale(1.2);
+	transition: transform 3s ease-out-in;
+  }
   
   @layer base {
   :root {
@@ -135,7 +143,6 @@ form {
 	height: 100%;
 	overflow: hidden;
 	transition: transform 0.6s ease-in-out;
-	z-index: 100;
 }
 
 .container.right-panel-active .overlay-container{
