--- a/Real-estate-frontend/src/index.css
+++ b/Real-estate-frontend/src/index.css
@@ -216,9 +216,17 @@ form {
 	width: 40px;
 }
 
-
-
-
 #nav-toggle:checked + #sidebar{
 	width: 10px;
 }
+
+
+
+/* 
+@keyframes rotateGlobe {
+	0% { transform: rotateX(0deg); }
+	100% { transform: rotateY(180deg); }
+}
+.globe-container {
+	animation: rotateGlobe 10s linear infinite;
+} */
